  when support for PostgreSQL 8.3 was dropped, since the same function has
  been available in the PostgreSQL core since then.
* Improved the support for type name aliases to the following functions:
    * `has_cast()`
    * `hasnt_cast()`
    * `cast_context_is()`
    * `domain_type_is()`
    * `domain_type_isnt()`
    * `has_operator()`
    * `hasnt_operator()`

1.3.0 2023-08-14T22:14:20Z
--------------------------
* Fixed an issue with xUnit tests where they would exit immediately on
  unexpected errors (aside from PL/pgSQL RAISE errors) rather than exit just the
  current test function. Thanks to @kzathey for the report and to @fjf2002 for
  the analysis.
* Fixed a pluralization error reporting xUnit test failures to report "failed 1
  test" instead of "failed 1 tests".
* Removed the indentation for diagnostic comments at the start of subtests to
  make it easier to see where they start and end. This changes the output
  format, which will not affect tests run by `pg_prove`, but will break tests
  that depend on diffing files, as `pg_regress` does. Thanks to Matt DeLuco for
  highlighting the visual confusion of the indented diagnostic (#264).
* Added variants of `col_is_pk()` with schema and without description (variants
  without schema or description already existed). Thanks to Luca Ferrari and
  Matteo Ferrando for the PRs (#178 & #199)!
* Added a note on the use of temporary tables to the `fk_ok()` documentation, as
  well as a test to ensure the suggested expressions work. Thanks to Jim Nasby
  for highlighting the special treatment of the temporary schema (#109).
* Removed redundant `DROP` statements from the 1.2.0 upgrade script that
  prevented upgrades from working properly. Thanks to @robins for the PR
  (#300)!
* Fixed a test failure caused by the removal of support for select rules in
  postgres/postgres@b23cd18 (expected in Postgres 16). Thanks to @Deltaus for
  the report (#309)!