@@ -81,12 +81,6 @@ installed, you can upgrade it to a properly packaged extension with:
 
     CREATE EXTENSION pgtap FROM unpackaged;
 
-If you want to install pgTAP and all of its supporting objects into a
-specific schema, use the `PGOPTIONS` environment variable to specify the
-schema, like so:
-
-    PGOPTIONS=--search_path=tap psql -d mydb -f pgTAP.sql
-
 If you want to install pgTAP and all of its supporting objects into a specific
 schema, use the `SCHEMA` clause to specify the schema, like so:
 
